k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buyflow-ingress
  namespace: buyflow
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - buyflow-system.168-110-117-4.nip.io
      secretName: buyflow-tls
  rules:
    - host: buyflow-system.168-110-117-4.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: buyflow-backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: buyflow-frontend-service
                port:
                  number: 3000
